fix container wrapping on tables.

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,14 +1,9 @@
-// html {
-// 	position: absolute;
-// 	min-width: 100%;
-// 	margin: 0;
-// 	padding: 0;
-// }
+html {
+	margin: 0;
+	padding: 0;
+}
 
-// body {
-// 	min-width: 100%;
-// 	display: inline-block;
-// 	margin: 0;
-// 	padding: 0;
-// 	box-sizing: border-box;
-// }
+body {
+	margin: 0;
+	padding: 0;
+}
